--- a/zoo.html
+++ b/zoo.html
@@ -1,4 +1,5 @@
 <head> 
+  <title>Zoo</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
@@ -66,3 +67,4 @@
         </div>
       </div>
     </div>
+
